Shapes resized on mobile to avoid scroll

--- a/css/triangles.css
+++ b/css/triangles.css
@@ -1,6 +1,7 @@
 .shape {
   position: absolute;
   z-index: -1;
+  overflow-x: hidden;
 }
 .triangle-background-pink {
   bottom: 20%;
@@ -28,4 +29,19 @@
   bottom: 8%;
   right: 7%;
   transform: rotate(147deg);
+}
+/*MOBILE*/
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .triangle-background-orange {
+    width: 250px;
+  }
+  .triangle-contact-green {
+    width: 150px;
+    top: 4%;
+    right: 10%;
+    transform: rotate(60deg);
+  }
+  .triangle-contact-blue {
+    right: 15%;
+  }
 }
